@@ -2,3 +2,5 @@
 This is our project in OOP subject in HUST uni
 
 The purpose of this project is to help everyone understand different type of viruses, as well as the way they infect in order to have the basic knowledge to prevent them
+
+remember to add VM path: --module-path path-to-your-javafx-sdk --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.controls,javafx.media to running
